@@ -1,10 +1,7 @@
 package org.pmiops.workbench.disks;
 
 import java.util.List;
-import java.util.logging.Logger;
-import java.util.stream.Collectors;
 import org.broadinstitute.dsde.workbench.client.leonardo.model.ListPersistentDiskResponse;
-import org.pmiops.workbench.legacy_leonardo_client.model.LeonardoListPersistentDiskResponse;
 import org.pmiops.workbench.leonardo.LeonardoApiClient;
 import org.pmiops.workbench.leonardo.PersistentDiskUtils;
 import org.pmiops.workbench.model.Disk;
@@ -15,41 +12,38 @@ import org.springframework.stereotype.Service;
 
 @Service
 public class DiskService {
-  private static final Logger log = Logger.getLogger(DiskService.class.getName());
   private final LeonardoMapper leonardoMapper;
-  private final LeonardoApiClient leonardoNotebooksClient;
+  private final LeonardoApiClient leonardoApiClient;
   private final WorkspaceService workspaceService;
 
   @Autowired
   public DiskService(
       LeonardoMapper leonardoMapper,
-      LeonardoApiClient leonardoNotebooksClient,
+      LeonardoApiClient leonardoApiClient,
       WorkspaceService workspaceService) {
     this.leonardoMapper = leonardoMapper;
-    this.leonardoNotebooksClient = leonardoNotebooksClient;
+    this.leonardoApiClient = leonardoApiClient;
     this.workspaceService = workspaceService;
   }
 
   public void deleteDisk(String workspaceNamespace, String diskName) {
     String googleProject =
         workspaceService.lookupWorkspaceByNamespace(workspaceNamespace).getGoogleProject();
-    leonardoNotebooksClient.deletePersistentDisk(googleProject, diskName);
+    leonardoApiClient.deletePersistentDisk(googleProject, diskName);
   }
 
   public void deleteDiskAsService(String workspaceNamespace, String diskName) {
     String googleProject =
         workspaceService.lookupWorkspaceByNamespace(workspaceNamespace).getGoogleProject();
-    leonardoNotebooksClient.deletePersistentDiskAsService(googleProject, diskName);
+    leonardoApiClient.deletePersistentDiskAsService(googleProject, diskName);
   }
 
   public List<Disk> getAllDisksInWorkspaceNamespace(String workspaceNamespace) {
     String googleProject =
         workspaceService.lookupWorkspaceByNamespace(workspaceNamespace).getGoogleProject();
-    List<LeonardoListPersistentDiskResponse> responseList =
-        leonardoNotebooksClient.listDisksByProjectAsService(googleProject);
-    return responseList.stream()
-        .map(leonardoMapper::toApiListDisksResponse)
-        .collect(Collectors.toList());
+    List<ListPersistentDiskResponse> responseList =
+        leonardoApiClient.listDisksByProjectAsService(googleProject);
+    return responseList.stream().map(leonardoMapper::toApiListDisksResponse).toList();
   }
 
   public List<Disk> getOwnedDisksInWorkspace(String workspaceNamespace) {
@@ -57,17 +51,15 @@ public class DiskService {
         workspaceService.lookupWorkspaceByNamespace(workspaceNamespace).getGoogleProject();
 
     List<ListPersistentDiskResponse> responseList =
-        leonardoNotebooksClient.listPersistentDiskByProjectCreatedByCreator(googleProject);
+        leonardoApiClient.listPersistentDiskByProjectCreatedByCreator(googleProject);
 
     return PersistentDiskUtils.findTheMostRecentActiveDisks(
-        responseList.stream()
-            .map(leonardoMapper::toApiListDisksResponse)
-            .collect(Collectors.toList()));
+        responseList.stream().map(leonardoMapper::toApiListDisksResponse).toList());
   }
 
   public void updateDisk(String workspaceNamespace, String diskName, Integer diskSize) {
     String googleProject =
         workspaceService.lookupWorkspaceByNamespace(workspaceNamespace).getGoogleProject();
-    leonardoNotebooksClient.updatePersistentDisk(googleProject, diskName, diskSize);
+    leonardoApiClient.updatePersistentDisk(googleProject, diskName, diskSize);
   }
 }
